// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VariableEditor > renders correctly with empty variables 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="false"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
              fill="currentColor"
            />
          </svg>
        </span>
        New Variable
      </button>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="false"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
              fill="currentColor"
            />
          </svg>
        </span>
        testVariable
      </button>
    </div>
  </div>
</div>
`;

exports[`VariableEditor > renders correctly with single variable with Token 1`] = `
<div>
  <div
    class="msla-editor-initialize-variable"
  >
    <div
      class="msla-variable-editor-heading"
    >
      <button
        aria-expanded="false"
        class="fui-Button r1alrhcs msla-variable-editor-heading-button ___13arsol_wkbbhs0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl"
        style="justify-content: flex-start; width: 90%;"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
        >
          <svg
            aria-hidden="true"
            class="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.3 4.3a1 1 0 0 0 0 1.4l6.29 6.3-6.3 6.3a1 1 0 1 0 1.42 1.4l7-7a1 1 0 0 0 0-1.4l-7-7a1 1 0 0 0-1.42 0Z"
              fill="currentColor"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.47 4.22c-.3.3-.3.77 0 1.06L15.19 12l-6.72 6.72a.75.75 0 1 0 1.06 1.06l7.25-7.25c.3-.3.3-.77 0-1.06L9.53 4.22a.75.75 0 0 0-1.06 0Z"
              fill="currentColor"
            />
          </svg>
        </span>
        testVariable
      </button>
    </div>
  </div>
</div>
`;
